# vicon-verification

./: 2018_02_02_zed_verification.txt  CMakeLists.txt  README.md  jetson_SEH.cfg
data_saves/: 2018_02_02_zed_verification_1.txt  data_plot.m  data_plot.m~  quat_to_eangles.m  quat_to_rot.m  rot_to_eangles.m  rot_to_eangles.m~
doc/: FlightSoftware.tex  pos_att_est.m  sensor_calib.m
include/: fdcl_EKF.h  fdcl_common_type.h  fdcl_control.h  fdcl_i2c.h  fdcl_save.h  fdcl_serial.h  fdcl_vicon.h  fdcl_vn100.h  fdcl_wifi.h  main_Base.h
libraries/vectornav/: .gitignore  README.md
scratch/: Makefile  client.c  misc_matrix_func.h  my_config.txt  server  server.c  tcpip_Lee.h  test_calib  test_calib.c  test_gtk  test_gtk.c  test_pack  test_pack.c  test_read_param.h  test_vrpn.c  window_main.glade  window_main.glade~
scripts/: plot_funcs.py  read_data.py
src/: fdcl_EKF.cpp  fdcl_control.cpp  fdcl_i2c.cpp  fdcl_save.cpp  fdcl_serial.cpp  fdcl_vicon.cpp  fdcl_vn100.cpp  fdcl_wifi.cpp  main_Base.cpp  main_Jetson.cpp
